--- a/github-user-search/.gitignore
+++ b/github-user-search/.gitignore
@@ -11,8 +11,10 @@ node_modules
 dist
 dist-ssr
 *.local
-#Environmental variables
+
+#Envvionmental variables
 .env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
